<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_magic</name>
  <version>0.0.1</version>
  <description>A ROS2 node that drives the turtle along a defined path when triggered by a service call.</description>
  <maintainer email="subhaan.syed01@gmail.com">Subhaan Syed</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
